--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,29 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :first_name%><br>
+    <%= f.text_field :first_name %>
+  </div>
+
+
+  <div class="field">
+    <%= f.label :last_name%><br>
+    <%= f.text_field :last_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :contact_number%><br>
+    <%= f.text_field :contact_number %>
+  </div>
+
+
+  <div class="field">
+    <%= f.label :address%><br>
+    <%= f.text_area :address %>
+  </div>
+  
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
