--- a/app/views/auctions/_form.html.erb
+++ b/app/views/auctions/_form.html.erb
@@ -1,42 +1,39 @@
-<%= form_with(model: auction, local: true) do |form| %>
-  <% if auction.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(auction.errors.count, "error") %> prohibited this auction from being saved:</h2>
+<div class="row" style="margin:3rem;">
+    <div class="col-sm-offset-2 col-xs-8">
+      <%= form_with(model: auction, local: true) do |form| %>
+        <%= render "devise/shared/error_messages", resource: auction %>
 
-      <ul>
-      <% auction.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <div class="form-group">
+          <%= form.label :name %>
+          <%= form.text_field :name, class: "form-control", placeholder: "Enter name of product" %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :description %>
+          <%= form.text_area :description, class: "form-control", placeholder:"Enter description" %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :starting_bid %>
+          <%= form.text_field :starting_bid, class: "form-control", placeholder:"Enter min reserve price" %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :deadline %>
+          <%= form.datetime_select :deadline, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= form.label :image %>
+          <%= form.file_field :image, class: "form-control" %>
+        </div>
+
+        <div class="form-group center"style="margin-top:3rem;">
+          <%= form.submit class: "btn btn-primary btn-md"%> 
+        </div>
+        <div class= "center">
+          [ <%= link_to 'Show', @auction %> | <%= link_to 'Back', :back %> ]
+        </div>
       <% end %>
-      </ul>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :starting_bid %>
-    <%= form.text_field :starting_bid %>
-  </div>
-
-  <div class="field">
-    <%= form.label :deadline %>
-    <%= form.datetime_select :deadline %>
-  </div>
-
-  <div class="field">
-    <%= form.label :image %>
-    <%= form.file_field :image %>
-  <div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
