--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,65 +1,63 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2 class="center">Edit <%= resource_name.to_s.humanize %></div>
+<div class="row">
+    <div class="col-sm-offset-2 col-xs-8">
+      <%= form_for(resource, as: resource_name, :html => { method: :put, class: "form-horizontal"}, url: registration_path(resource_name)) do |f| %> 
+        <%= render 'devise/shared/error_messages', resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="form-group">
+          <div class="col-md-6 no-padding">
+              <%= f.label :first_name  %>
+              <%= f.text_field :first_name, class: "form-control", placeholder: "Enter first_name", autofocus: true %>
+          </div>
+          <div class="col-md-6 no-padding left-padding">
+              <%= f.label :last_name  %>
+              <%= f.text_field :last_name, class: "form-control", placeholder: "Enter last_name"%>
+          </div>
+        </div>
 
-  <div   class="field">
-    <%= f.label :first_name%><br>
-    <%= f.text_field :first_name %>
-  </div>
+        <div class="form-group">
+          <%= f.label :contact_number%>
+          <%= f.text_field :contact_number, class: "form-control", placeholder: "Enter contact number" %>
+        </div>
 
+        <div class="form-group">
+          <%= f.label :Address  %>
+          <%= f.text_area :address, class: "form-control", placeholder: "Enter your address" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :last_name%><br>
-    <%= f.text_field :last_name %>
-  </div>
+        <div class="form-group">
+          <%= f.label :Email  %>
+          <%= f.email_field :email, class: "form-control", placeholder: "Enter email", autocomplete: "email" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :contact_number%><br>
-    <%= f.text_field :contact_number %>
-  </div>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+        
+        <div class="form-group">
+          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i>
+          <%= f.password_field :password, class: "form-control", placeholder:"Enter Password" %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+          </div>
 
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: "form-control", placeholder:"Confirm Password" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :address%><br>
-    <%= f.text_area :address %>
-  </div>
+        <div class="form-group">
+          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+          <%= f.password_field :current_password, class: "form-control", placeholder:"Confirm Password" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+        <div class="form-group center">
+          <%= f.submit "Update", class: "btn btn-primary btn-md" %>
+        </div>
+        <div class="center" style="margin:2rem;">
+          [  <%= link_to "Back", :back %>  ]
+        </div>
+      <% end %>
+    </div>
+</div>
