--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,10 @@
   <body>
   
     <%= render 'layouts/navigation'%>
-    <div class="container">
+    <div class="container cc">
       <%= yield %>
-    <div>
+    </div>
+
+    <%= render 'layouts/footer'%>
   </body>
 </html>
