--- a/app/views/auctions/edit.html.erb
+++ b/app/views/auctions/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Auction</h1>
+<h1 class="center">Editing product</h1>
 
 <%= render 'form', auction: @auction %>
-
-<%= link_to 'Show', @auction %> |
-<%= link_to 'Back', auctions_path %>
