--- a/app/views/auctions/new.html.erb
+++ b/app/views/auctions/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Auction</h1>
+<h1 class="center">add new product for auction</h1>
 
 <%= render 'form', auction: @auction %>
-
-<%= link_to 'Back', auctions_path %>
