--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+<h1 class="center"> Forgot your password? </div>
+<div class="row center" style="margin:5rem;">
+    <div class="col-sm-offset-2 col-xs-8">
+      <%= form_for(resource, as: resource_name, :html => { method: :post, class: "form-horizontal"}, url: password_path(resource_name)) do |f| %> 
+        <%= render "devise/shared/error_messages", resource: resource %>
+        
+        <div class="form-group">
+            <div class="contrl-lable col-sm-2">
+                <%= f.label :Email  %>
+            </div>
+            <div class="col-sm-10">
+                <%= f.email_field :email, class: "form-control", placeholder: "Enter email", autofocus: true %>
+            </div>
+        </div>
+        <div cass="col-sm-10">
+            <%= f.submit "Send me reset password instructions", class: "btn btn-primary btn-md" %>
+        </div>
+        <div class="center" style="margin:2rem;">
+          [  <%= link_to "Back", :back %>  ]
+        </div>
+      <% end %>
+    </div>
+</div>
 
 <%= render "devise/shared/links" %>
