--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,52 +1,56 @@
-<h2>Sign up</h2>
+<h2 class="center"> Sign up </div>
+<div class="row" style="margin:3rem;">
+    <div class="col-sm-offset-2 col-xs-8">
+      <%= form_for(resource, as: resource_name, :html => { class: "form-horizontal"}, url: registration_path(resource_name)) do |f| %> 
+        <%= render 'devise/shared/error_messages', resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="form-group">
+          <div class="col-md-6 no-padding">
+              <%= f.label :first_name  %>
+              <%= f.text_field :first_name, class: "form-control", placeholder: "Enter first_name", autofocus: true %>
+          </div>
+          <div class="col-md-6 no-padding left-padding">
+              <%= f.label :last_name  %>
+              <%= f.text_field :last_name, class: "form-control", placeholder: "Enter last_name"%>
+          </div>
+        </div>
 
-  <div class="field">
-    <%= f.label :first_name%><br>
-    <%= f.text_field :first_name %>
-  </div>
+        <div class="form-group">
+          <%= f.label :contact_number%>
+          <%= f.text_field :contact_number, class: "form-control", placeholder: "Enter contact number" %>
+        </div>
 
+        <div class="form-group">
+            <%= f.label :Address  %>
+            <%= f.text_area :address, class: "form-control", placeholder: "Enter your address" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :last_name%><br>
-    <%= f.text_field :last_name %>
-  </div>
+        <div class="form-group">
+              <%= f.label :Email  %>
+              <%= f.email_field :email, class: "form-control", placeholder: "Enter email", autocomplete: "email" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :contact_number%><br>
-    <%= f.text_field :contact_number %>
-  </div>
+        <div class="form-group">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end   %>
+          <%= f.password_field :password, class: "form-control", placeholder:"Enter Password" %>
+        </div>
 
-
-  <div class="field">
-    <%= f.label :address%><br>
-    <%= f.text_area :address %>
-  </div>
-  
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: "form-control", placeholder:"Confirm Password" %>
+        </div>
+        
+        <div class="form-group center">
+          <%= f.submit "Sign up", class: "btn btn-primary btn-md" %>
+        </div>
+        <div class="center" style="margin:2rem;">
+          [  <%= link_to "Back", :back %>  ]
+        </div>
+      <%end%>
+    </div>
+</div>    
 
 <%= render "devise/shared/links" %>
