--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -8,38 +7,36 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%# <a class="navbar-brand" id="logo" href="#">G-SHOP</a> %>
       <%= link_to 'Online Auction', root_path, class:"navbar-brand", id:"logo" %>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Auction Dashboard',auctions_path %></li>
-        <li><%= link_to 'User', users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories<span class="caret"></span></a>
             <ul class="dropdown-menu center">
-              <li><a href="#">Books</a></li>
-              <li><a href="#">Electronics</a></li>
-              <li><a href="#">Cycles</a></li>
+              <li><%= link_to 'Book', "#", id:"droplist" %></a></li>
+              <li><%= link_to 'Electronics', "#", id:"droplist" %></li>
+              <li><%= link_to 'Cycles', "#", id:"droplist" %></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Old papers</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Gyan</a></li>
+              <li><%= link_to 'User List', users_path, id:"droplist" %></li>
             </ul>
           </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        
         <% if user_signed_in? %>
-          
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> <%= current_user.full_name.present? ? current_user.full_name : current_user.email %><span class="caret"></span></a>
             <ul class="dropdown-menu center">
-              <li><%= link_to 'Add new Products', new_auction_path %></li>
-              <li><%= link_to 'View your profile', user_path(current_user) %></li>
-              <li><%= link_to 'Edit your profile', edit_user_registration_path(current_user) %></li>
+              <li><%= link_to 'Add Products', new_auction_path, id:"droplist" %></li>
+              <li><%= link_to 'User Dashboard', user_path(current_user), id:"droplist" %></li>
+              <li><%= link_to 'Edit User', edit_user_registration_path(current_user), id:"droplist" %></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Delete Account", registration_path(current_user), data: { confirm: "Are you sure?" }, method: :delete, id: "droplist" %></li>
+              <li><%= link_to 'Back', :back, id:"droplist" %></li>
             </ul>
           </li>
           <li><%= link_to 'Log out', destroy_user_session_path,method: :delete, class:"btn btn-danger", id:"logout-btn" %></li>
