--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -10,13 +10,13 @@
     </div>
     <div class= "col-xs-12 col-md-5 ">
         <h2 class="center"><%= @auction.name %></h2>
-        <h3>STARTING BID: <%= @auction.starting_bid %> &#x20B9; | CURRENT PRICE: <%= @auction.current_price %> &#x20B9;</h3> 
+        <h3>STARTING BID: <%= @auction.starting_bid %> &#x20B9; <br> CURRENT PRICE: <%= @auction.current_price %> &#x20B9;</h3> 
         
         <h3>Description</h3>
         <p><%= @auction.description%></p>
         
-        <h3>Deadline for auction</h3>
-        <p><%= @auction.deadline%></p>
+        <h3>Deadline for auction: <%= time_ago_in_words(@auction.deadline) %></h3>
+        <p></p><br>
         
         <% if user_signed_in? && current_user == @auction.user %>
             <%= link_to 'Edit the Details', edit_auction_path, class:"btn btn-sm btn-primary " %>
@@ -26,12 +26,11 @@
 
         <% if @auction.user != current_user %>
             <%= link_to 'Back to Home', auctions_path, class:"btn btn-sm btn-success" %>
-            <%= link_to 'Bid Now', '#', class:"btn btn-sm btn-success" %>
+            <%= link_to 'Bid Now', new_bid_path, class:"btn btn-sm btn-success" %>
         <% end %>
     </div>
 </div>
 <div>
-    <hr>
     <p>Seller Details </p>
     <h2><%= link_to @auction.user.full_name, @auction.user == current_user && user_signed_in? ? user_path(@auction.user) : '#'%></h2>
     <small> 
