--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
   
     <%= render 'layouts/navigation'%>
-    <div class="container cc">
+    <div class="container">
       <%= yield %>
     </div>
 
