--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,35 +75,29 @@
     -webkit-transform: rotate(270deg); 
     transform: rotate(270deg);
 }
-.relocate1{
-    margin: 4.1rem 1.5rem;
-}
-.relocate2{
-    margin: 4.1rem 0.5rem;
-}
-.relocate3{
-    margin: 4.1rem 1.45rem;
-}
+
 .user-details {
     // height: 18rem;
     margin: 5rem 30rem;
     border-radius: 1em;
     box-shadow: 0px 1px 30px 0.1px #d4d4d4;
 }
-.home_page_touchup {
+.home-page-touchup {
     height: 55rem;
     margin: 1rem 1rem;
     padding: 0rem;
 }
-.home_page_touchup:hover {
-    margin: 1rem 1rem;
+.home-page-touchup:hover {
     box-shadow: 0px 0px 30px 0.1px #d4d4d4;
 }
-.user-show-page {
-
+.user-index-page {
+    margin: 5rem 25rem;
+}
+.user-index-page:hover {
+    box-shadow: 0px 0px 10px 0.1px #e9e3e3;
 }
 .user-show-page:hover {
-    box-shadow: 0px 0px 30px 0.1px #d4d4d4;
+    box-shadow: 0px 0px 20px 0.1px #e9e3e3;
 }
 .footer-item {
  
