--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -26,7 +26,7 @@
 
         <% if @auction.user != current_user %>
             <%= link_to 'Back to Home', auctions_path, class:"btn btn-sm btn-success" %>
-            <%= link_to 'Bid Now', new_bid_path, class:"btn btn-sm btn-success" %>
+            <%= link_to 'Bid Now', new_bid_path(:id => @auction.id), class:"btn btn-sm btn-success" %>
         <% end %>
     </div>
 </div>
