--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -11,7 +11,15 @@
         <div class="thumbnail home-page-touchup">
           <%= image_tag(auction.image, style:"height:241px; width:100%") if auction.image.attached? %>
           <div class="caption">
-            <h4 class="center">STARTING BID: <%= auction.starting_bid %> &#x20B9; <br> CURRENT PRICE: <%= auction.current_price %> &#x20B9;</h4>
+            <h4 class="center">
+              <small>STARTING BID:</small> <%= auction.starting_bid %> &#x20B9; <br> 
+              <small>CURRENT PRICE:</small> <%= auction.current_price %> &#x20B9;<br>
+              <% if auction.bidder_id %>
+                <small>CURRENT BIDDER:</small> <%= User.find(auction.bidder_id).full_name %>
+              <% else %>
+                 <small>No bidding found </small>
+              <% end %>
+            </h4>
             <h3 class="center"><%= auction.name %></h3>
             <p class="center"><%= truncate(auction.description, :ommision => ".... Read More", :length => 150) %></p>
             
